// User table is public to everyone
Table users {
  id varchar [pk]
  created_at timestamp
  name varchar
  username varchar
}

Table user_portfolio {
  currency_symbol varchar [pk]
  user_id varchar [ref: > users.id]
  net_value float
  sum float
}

Table user_stocks {
  id varchar unique
  created_at timestamp
  updated_at timestamp
  exchange varchar
  symbol varchar
  amount int
  avg_price int  // total_spent / amount
  total_spent int
  consolidated_at timestamp
}

Table user_queue_orders {
  id varchar unique
  created_at timestamp
  updated_at timestamp
  amount int
  price int // atualizado no servidor
  mic_code varchar [ref: > exchanges.mic_code]  // info duplicada a fins de NOSQL
  user_id varchar [ref: > users.id]
  symbol varchar [ref: > stocks.symbol]
  exchange varchar // info duplicada a fins de NOSQL
  done boolean [default: false]
}

Table exchanges {
  created_at timestamp
  updated_at timestamp
  name varchar
  mic_code varchar [pk]
  country varchar
  suffix varchar
  delay varchar
  timezone varchar
}

Table stocks {
  symbol varchar [pk]
  created_at timestamp
  updated_at timestamp
  name varchar
  currency varchar
  exchange varchar
  mic_code varchar [ref: - exchanges.mic_code]
  type varchar
  price int
  price_flutuation float
  price_absolute_flutuation float
  // eod_past_week []
  sector varchar
  industry varchar
  employees int
  website varchar
  description varchar
  ceo varchar
  address varchar
  city varchar
  zip varchar
  state varchar
  country varchar
  phone varchar
}

Table time_series {
  datetime timestamp
  symbol varchar
  interval varchar
  currency varchar
  exchange_timezone varchar
  exchange varchar
  mic_code varchar
  open numeric
  high numeric
  low numeric
  close numeric
  volume numeric
}

// Table sector
// Table industry
// enums: intervals, stock_type, sectors, industry, mic_code, currency, country
